--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
     <span>DESIGN:  <a href="#"> TEMPLATEMO </a></span>
 </div>
      </section>
-    <script src="main.js"></script>
-    <script src="home.js"></script>
+    <script src="./Js/main.js"></script>
+    <script src="./Js/home.js"></script>
   </body>
 </html>
