--- a/meetings.html
+++ b/meetings.html
@@ -113,7 +113,7 @@
             <span>DESIGN:  <a href="#"> TEMPLATEMO </a></span>
         </div>
     </section>
-<script src="main.js"></script>
-    <script src="meeting.js"></script>
+    <script src="./Js/main.js"></script>
+    <script src="./Js/meeting.js"></script>
 </body>
 </html>
