--- a/comingMeeting.html
+++ b/comingMeeting.html
@@ -194,7 +194,8 @@
               <span>DESIGN: <a href="#"> TEMPLATEMO </a></span>
           </div>
     </section>
-    <script src="main.js"></script>
-<script src="coming.js"></script>
+    <script src="./Js/main.js"></script>
+    <script src="./Js/coming.js"></script>
+
     </body>
     </html>
