fixed header info

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
+    <title>EDU MEETING</title>
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/Normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -81,7 +80,7 @@
                 </p>
               </div>
             </div>
-            <div class="box active">
+            <div class="box">
               <div class="image">
                 <img src="./images/service-icon-01.png" alt="un found" />
               </div>
@@ -93,7 +92,7 @@
                 </p>
               </div>
             </div>
-            <div class="box active">
+            <div class="box">
               <div class="image">
                 <img src="./images/service-icon-01.png" alt="un found" />
               </div>
